--- a/style.css
+++ b/style.css
@@ -80,3 +80,27 @@ section h3{
     color:rgba(0, 0, 0, 0.5);
     margin:0px 20px;
 }
+
+
+
+@media screen and (width<=1200px){
+    .pera p {
+        width: 100%;
+        height: 120px;
+        padding: 15px;
+        text-align: justify;
+        font-size: 1.2rem;
+        background-color: #b3b3b3;
+    }
+}
+
+@media screen and (width<=930px){
+    .pera p {
+        width: 100%;
+        height: 170px;
+        padding: 15px;
+        text-align: justify;
+        font-size: 1rem;
+        background-color: #b3b3b3;
+    }
+}
