--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@ section h3{
     text-align: justify;
     font-size: 1.2rem;
     background-color: #b3b3b3;
+}
+.pera{
     overflow: hidden;
 }
 
